2008-06-25  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Added support for multi-level alphabetical
	indexes.

	* pytis/form/application.py: Use new `ExitDialog' constructor
	arguments.

	* pytis/form/dialog.py (ExitDialog): Further generalizations.
	(RunFormDialog): `MultiBrowseDualForm' added.

2008-06-24  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/application.py: Add formely saved startup forms to
	the list of forms within the exit dialog.

	* pytis/form/dialog.py (ExitDialog): Don't work with form
	instances, just with a generic list of items.

	* pytis/form/form.py (descr): Converted to a class method.

2008-06-23  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (BrowseForm): Added support for "index navigation".

	* pytis/data/postgresql.py (DBDataPostgreSQL.distinct): Added
	support for selection of distinct string prefixes.

2008-06-19  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/dualform.py (MultiForm): Handle forms with insufficient
	permissions.  Added support for keyboard form switching.  Handle
	form focus correctly.  Handle activation.

	* pytis/form/application.py (current_form): Test if `_application'
	is alive.

	* pytis/form/commands_.py: New command
	`MultiForm.COMMAND_NEXT_FORM'.  Added keyboard shortcuts.

2008-06-18  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (Binding): Allow Bindings
	without a binding column just with condition.

	* pytis/form/dualform.py
	(MultiSideBrowseForm.SubForm._init_attributes): Allow Bindings
	without a binding column just with condition.
	(MultiForm): Save/restore the active form correctly.
	(MultiForm._on_page_changed): Explicitly focus the selected form.

2008-06-16  Pavel Hanak  <hanak@asellus.cz>

	* pytis/data/postgresql.py
	(PostgreSQLStandardBindingHandler._pdbb_get_type): Added 'bigint'.

2008-06-13  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/dualform.py: Disable the title bar in multi-form
	inner forms.
